--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Con trai chủ tịch Techcombank sinh năm 1995 làm ‘thuyền trưởng’ Masterise Group",
+    "content": "Ông Hồ Anh Minh, con trai của Hồ Hùng Anh - chủ tịch Techcombank, đã chính thức đảm nhiệm vị trí tổng giám đốc của Masterise Group từ đầu năm 2025. Sự thay đổi này diễn ra bất ngờ khi ông Minh thay thế ông Trần Hoài Việt Anh. Ông Minh, sinh năm 1995, hiện đang nắm giữ hơn 344 triệu cổ phiếu TCB, tương ứng 4,87% vốn của Techcombank, có tài sản ước tính gần 9.500 tỷ đồng trên sàn chứng khoán.",
+    "link": "https://tuoitre.vn/con-trai-chu-tich-techcombank-sinh-nam-1995-lam-thuyen-truong-masterise-group-2025031420063673.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ai là tổng giám đốc mới của Masterise Group?",
+    "answers": [
+      {
+        "text": "Hồ Anh Minh",
+        "correct": true
+      },
+      {
+        "text": "Trần Hoài Việt Anh",
+        "correct": false
+      },
+      {
+        "text": "Đỗ Tú Anh",
+        "correct": false
+      },
+      {
+        "text": "Hồ Hùng Anh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đàn ông có nguy cơ béo phì gấp 3 lần sau khi lấy vợ",
     "content": "Nghiên cứu tại Ba Lan cho thấy đàn ông có nguy cơ béo phì cao gấp 3,2 lần sau khi kết hôn, trong khi nguy cơ này không đáng kể ở phụ nữ. Nguyên nhân chính được cho là do các yếu tố như tăng khẩu phần ăn và giảm hoạt động thể chất sau khi kết hôn. Hôn nhân cũng làm tăng khả năng thừa cân ở nam giới lên 62% và 39% ở phụ nữ. Bên cạnh đó, tuổi tác cũng góp phần làm tăng nguy cơ béo phì ở cả hai giới.",
     "link": "https://vnexpress.net/dan-ong-co-nguy-co-beo-phi-gap-3-lan-sau-khi-lay-vo-4861298.html",
@@ -301,6 +328,33 @@
     ]
   },
   {
+    "title": "Bí quyết giúp con giỏi tiếng Anh",
+    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
+    "answers": [
+      {
+        "text": "Tạo môi trường học tập 100% tiếng Anh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dạy lý thuyết mà không thực hành",
+        "correct": false
+      },
+      {
+        "text": "Không khuyến khích trẻ giao tiếp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cho trẻ xem phim tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -327,33 +381,6 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bí quyết giúp con giỏi tiếng Anh",
-    "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để giúp trẻ em giỏi tiếng Anh?",
-    "answers": [
-      {
-        "text": "Tạo môi trường học tập 100% tiếng Anh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dạy lý thuyết mà không thực hành",
-        "correct": false
-      },
-      {
-        "text": "Không khuyến khích trẻ giao tiếp",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cho trẻ xem phim tiếng Việt",
         "correct": false
       }
     ]
@@ -510,6 +537,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -536,33 +590,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -1105,33 +1132,6 @@
     ]
   },
   {
-    "title": "6 vitamin, khoáng chất cần thiết cho não",
-    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
-    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
-    "answers": [
-      {
-        "text": "Vitamin D, B, magie, omega-3, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Vitamin C, D, sắt",
-        "correct": false
-      },
-      {
-        "text": "Canxi, vitamin E, kali",
-        "correct": false
-      },
-      {
-        "text": "Vitamin B, A, kẽm, magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
     "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
     "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
@@ -1154,6 +1154,33 @@
       },
       {
         "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
         "correct": false
       }
     ]
@@ -1963,33 +1990,6 @@
     ]
   },
   {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -2016,6 +2016,33 @@
       },
       {
         "text": "Bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
