--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,28 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
-    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
-    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "title": "Tuchel gọi Rashford lên tuyển Anh",
+    "content": "Thomas Tuchel, HLV mới của tuyển Anh, đã triệu tập Marcus Rashford trở lại đội tuyển để chuẩn bị cho vòng loại World Cup 2026. Rashford đã không thi đấu cho tuyển Anh kể từ tháng 3/2024 và vừa chuyển đến Aston Villa theo hợp đồng cho mượn. Trong buổi họp báo, Tuchel đã ca ngợi Rashford vì những đóng góp tích cực tại CLB mới và cho rằng đây là thời điểm thích hợp để triệu tập anh nhằm giúp anh duy trì phong độ. Vòng loại World Cup sẽ diễn ra từ ngày 21/3/2025.",
+    "link": "https://vnexpress.net/tuchel-goi-rashford-len-tuyen-anh-4861543.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Marcus Rashford được triệu tập lên tuyển Anh lần này?",
     "answers": [
       {
-        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "text": "Vì anh thể hiện phong độ tốt tại Aston Villa.",
         "correct": true
       },
       {
-        "text": "Vì thời tiết đẹp quanh năm.",
+        "text": "Vì anh là cầu thủ nổi tiếng nhất nước Anh.",
         "correct": false
       },
       {
-        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "text": "Vì anh đã ghi nhiều bàn thắng ở mùa giải này.",
         "correct": false
       },
       {
-        "text": "Vì Việt Nam có nhiều món ăn ngon.",
+        "text": "Vì anh là đội trưởng của tuyển Anh.",
         "correct": false
       }
     ]
@@ -161,6 +161,33 @@
       },
       {
         "text": "Không hợp tác với truyền thông",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
+    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
+    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "answers": [
+      {
+        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "correct": true
+      },
+      {
+        "text": "Vì thời tiết đẹp quanh năm.",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Việt Nam có nhiều món ăn ngon.",
         "correct": false
       }
     ]
@@ -282,6 +309,33 @@
     ]
   },
   {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -308,33 +362,6 @@
       },
       {
         "text": "3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -985,33 +1012,6 @@
     ]
   },
   {
-    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
-    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
-    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
-    "answers": [
-      {
-        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
-        "correct": true
-      },
-      {
-        "text": "Cắt giảm chi phí hoạt động đáng kể.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong chiến lược.",
-        "correct": false
-      },
-      {
-        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -1038,6 +1038,33 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
+    "answers": [
+      {
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
+        "correct": true
+      },
+      {
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong chiến lược.",
+        "correct": false
+      },
+      {
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
@@ -2419,33 +2446,6 @@
     ]
   },
   {
-    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
-    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
-    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
-    "answers": [
-      {
-        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
-        "correct": true
-      },
-      {
-        "text": "Không, khó thở không liên quan đến cúm A.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần khám phổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
     "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
     "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
@@ -2468,6 +2468,33 @@
       },
       {
         "text": "Khi trẻ bị viêm phổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
+    "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
+    "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Khó thở sau khi khỏi cúm A có phải do phổi chưa hồi phục không?",
+    "answers": [
+      {
+        "text": "Có, phổi có thể chưa hồi phục hoàn toàn.",
+        "correct": true
+      },
+      {
+        "text": "Không, khó thở không liên quan đến cúm A.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần khám phổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, chỉ cần nghỉ ngơi là đủ.",
         "correct": false
       }
     ]
@@ -3265,6 +3292,33 @@
     ]
   },
   {
+    "title": "Cắt túi mật có giảm tuổi thọ?",
+    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
+    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
+    "answers": [
+      {
+        "text": "Không, cắt túi mật không giảm tuổi thọ.",
+        "correct": true
+      },
+      {
+        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
+        "correct": false
+      },
+      {
+        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Cắt túi mật hoàn toàn không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
     "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
     "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
@@ -3318,33 +3372,6 @@
       },
       {
         "text": "Vì xe có nhiều màu sắc lựa chọn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cắt túi mật có giảm tuổi thọ?",
-    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
-    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
-    "answers": [
-      {
-        "text": "Không, cắt túi mật không giảm tuổi thọ.",
-        "correct": true
-      },
-      {
-        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
-        "correct": false
-      },
-      {
-        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Cắt túi mật hoàn toàn không cần thiết.",
         "correct": false
       }
     ]
